[gd_scene load_steps=16 format=2]

[ext_resource path="res://Ressources/Enemie/HeavyBandit.png" type="Texture" id=1]
[ext_resource path="res://Ressources/Enemie/EnemieBandits.gd" type="Script" id=2]
[ext_resource path="res://HitAndHurt Boxs/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ressources/HeroFull/Prototype Hero 1.3/Audio/Hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://Ressources/HeroFull/Prototype Hero 1.3/Audio/Death.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
}, {
"args": [  ],
"method": "start_walk"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GettingHit:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_walk"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 30, 30, 29, 28, 26, 25, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Die:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1.67654, 26.5409 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 20.141 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 8.04583 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 3.40219, 26.9201 )

[node name="EnemieBandits" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8.65936, -2.52464 )
texture = ExtResource( 1 )
hframes = 8
vframes = 5
frame = 19

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 49152
collision_mask = 49152

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( -22.9892, 0.466011 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Damaged = SubResource( 3 )
anims/Dead = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Moving = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.71908, -0.929647 )
scale = Vector2( 4.32034, 0.723859 )
shape = SubResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -3.02771, -30.9822 )
enabled = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -14.155, -2.31925 )
shape = SubResource( 8 )

[node name="AttackDetector" type="Area2D" parent="."]
modulate = Color( 0.941176, 0.0470588, 0.0470588, 1 )
monitoring = false
monitorable = false
collision_layer = 49152
collision_mask = 49152

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( -13.6152, -0.965179 )
shape = SubResource( 9 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 7.80138, -1.51364 )
scale = Vector2( 4.32034, 0.723859 )
collision_layer = 786432
collision_mask = 786432

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1.71863, -0.461016 )
shape = SubResource( 10 )

[node name="GettingHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
